linotp (2.12.4.dev0-1) buster; urgency=medium

  Fix:
  * Include Readme.rst in packaging artifacts
  * Import User dialog layout fix
  * Fix problem in help text output of linotp-create-htdigest script
  * No longer deploy obsolete who.ini config file
  * Forward tokens support multiple challenges

 -- LinOTP Packaging <packaging.linotp@arxes-tolina.de>  Wed, 05 Mar 2021 11:44:20 +0100

linotp (2.12.3-1) buster; urgency=medium

  Feature:
  * Server: add API /reporting/period to query reporting for a period in a
    range between 'from' and 'to', where the 'from' date is included in the
    range and the 'to' date is not included. The API will search for the last
    repoting entry before the period if no entry for the given period is found.

 -- LinOTP Packaging <packaging.linotp@arxes-tolina.de>  Tue, 06 Apr 2021 14:28:00 +0100

linotp (2.12.2-1) buster; urgency=medium

  Fix:
  * Server: Make rollout token behaviour consistent when used for validate
    workflow (description and cleanup behaviour).

 -- LinOTP Packaging <packaging.linotp@arxes-tolina.de>  Mon, 15 Feb 2021 12:22:00 +0100

linotp (2.12.1-1) buster; urgency=low

  Fix:
  * Policies: Consistent evaluation of policies is ensured in the "enrollment"
    scope. Evaluation is adjusted to match all actions for a given user if some
    of the actions are less explicitly defined regarding user and realm fields
  * Selfservice: MFA login with Push Token and QR Token is correctly processed
  * Incorrect max token count evaluation is fixed if a different, more specific
    (not user:*) policy with other actions is defined.

  Doc:
  * Update Readme.rst with latest installation instructions

 -- LinOTP Packaging <packaging.linotp@arxes-tolina.de>  Fri, 23 Oct 2020 12:04:46 +0200

linotp (2.12-1) buster; urgency=low

  Feature:
  * Server: Expired or wrong cookies in userservice requests will return a
          HTTP 401 (session abort) error
  * Server and UI: Add three new columns to the token table: